Theme menu alignment fix
Last theme menu alignment fix
Everything works except that when the page is reloaded, the CSS on the theme menu doesn't work until you open another button.

--- a/bin/src/scripts/themeMenu.css
+++ b/bin/src/scripts/themeMenu.css
@@ -140,8 +140,8 @@
     box-sizing: border-box;
     scrollbar-color: #e1e2e4 #0000;
     position: absolute;
-    top: 38px;
-    right: 0px;
+    top: 44px;
+    right: 192px;
     margin-top: 2px;
     min-width: 320px;
     background-color: rgb(255, 255, 255);
